workspace = { members = ["stomp_parser_derive"] }
[package]
name = "stomp-parser"
version = "0.1.0"
edition = "2021"
rust-version = "1.61"
license = "MIT"

[dependencies]
anyhow = "1.0.79"
nom = "7"
stomp_parser_derive = { path = "./stomp_parser_derive" }

[dev-dependencies]
assert_matches2 = "0.1"
pretty_assertions = { version = "1" }

[metadata]
msrv = "1.61"

